# Taxi_demand_predictor

./: .env  .gitignore  README.md  makefile  pyproject.toml
.github/: backfill_feature_group.yaml  inference_pipeline.yaml  training_pipeline.yaml
.github/workflows/: backfill_feature_group.yaml  feature_pipeline.yaml  inference_pipeline.yaml  training_pipeline.yaml
models/: model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_feature_and_target.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_visualize_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_model_with_feature _engineerig.ipynb  10_lightgbm_model_with_hyperparameter_tuning.ipynb  11_backfill_feature_store.ipynb  12_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
scripts/: backfill_feature_group.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/: config.py  data.py  data_split.py  feature_config.py  feature_store_api.py  inference.py  model_registry_api.py  paths.py
